[package]
name = "pcsv"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
comfy-table = "7.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10" 
toml = "0.7"
termion = "2.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "pcsv"
path = "src/main.rs"
